--- a/techlab-2/package.json
+++ b/techlab-2/package.json
@@ -24,6 +24,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.14.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
